# VibyTalk

./: .gitignore  README.md  config.py  datasets.py  export_onnx.py  extract_dataset_data.py  inference.py  pyproject.toml  realtime.py  train.py  unet.py
data_utils/: base_module.py  detect_face.py  face_utils.py  get_landmark.py  mel_extractor.py  pfld_mobileone.py  process.py
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/public/: complete_dataset.json
web/src/: App.vue  style.css
web/src/components/: vibytalk.vue
web/src/services/: AudioService.ts  StreamingFeatureExtractorService.ts  core.ts  index.ts
web/src/services/inference/: StreamingInferenceService.ts
web/src/services/inference/workers/: feature.worker.ts  streaming.inference.worker.ts
web/src/services/media/: DataLoaderService.ts  ImageProcessingService.ts  UnifiedPlaybackService.ts
web/src/services/media/workers/: image-processing.worker.ts
