[project]
name = "talk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.8.1",
    "einops>=0.8.1",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "kaldi-native-fbank>=1.21.2",
    "librosa>=0.11.0",
    "lpips>=0.1.4",
    "matplotlib>=3.10.3",
    "onnx>=1.18.0",
    "onnx-pytorch>=0.1.5",
    "onnx2pytorch>=0.5.1",
    "onnxruntime>=1.22.0",
    "onnxscript>=0.3.1",
    "opencv-python>=4.11.0.86",
    "resampy>=0.4.3",
    "seaborn>=0.13.2",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "thop>=0.1.1.post2209072238",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "transformers>=4.53.0",
    "wandb>=0.21.0",
    "yt-dlp>=2025.6.30",
]
